# hometree

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: cd.yml  ci.yml
crates/hometree-cli/: Cargo.toml
crates/hometree-cli/src/: daemon.rs  debounce.rs  lib.rs  main.rs  track.rs  watch.rs
crates/hometree-cli/tests/: cli_integration.rs
crates/hometree-core/: Cargo.toml
crates/hometree-core/src/: config.rs  deploy.rs  error.rs  generations.rs  inhibit.rs  lib.rs  lock.rs  managed_set.rs  paths.rs  plan.rs  secrets.rs  verify.rs
crates/hometree-core/src/git/: backend.rs  cli.rs  mod.rs
crates/hometree-core/tests/: secrets_integration.rs
docs/: cli.md  config.md  daemon.md  deploy-rollback.md  faq.md  index.md  install.md  paths.md  quickstart.md  safety.md  secrets.md  troubleshooting.md  verify.md
website/: next.config.mjs  package.json  source.config.ts  tsconfig.json  wrangler.toml
website/app/: layout.tsx
website/app/(home)/: page.tsx
website/app/docs/[[...slug]]/: page.tsx
website/app/og/docs/[...slug]/: route.tsx
website/lib/: layout.shared.tsx
website/public/: site.webmanifest
