[package]
name = "hometree-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hometree"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hometree-core = { path = "../hometree-core" }
globset = "0.4"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
signal-hook = "0.3"
fs2 = "0.4"

[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
age = "0.10"
