[package]
name = "hometree-core"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
walkdir = "2"
fs2 = "0.4"
filetime = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
