[package]
name = "hometree-core"
version = "0.4.0"
edition = "2021"

[dependencies]
directories = "5"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
walkdir = "2"
fs2 = "0.4"
filetime = "0.2"
libc = "0.2"
age = "0.11"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3"
secrecy = "0.10"
